# Programming-languages-and-methods

./: CMakeLists.txt  main.cpp
Semestr-1/: check.cpp  program1.cpp  program10.cpp  program11.cpp  program12.cpp  program13.cpp  program14.cpp  program15.cpp  program16.cpp  program17.cpp  program18.cpp  program19.cpp  program2.cpp  program20.cpp  program21.cpp  program22.cpp  program23.cpp  program24.cpp  program25.cpp  program26.cpp  program27.cpp  program28.cpp  program29.cpp  program3.cpp  program30.cpp  program31.cpp  program32.cpp  program33.cpp  program34.cpp  program35.cpp  program36.cpp  program37.cpp  program38.cpp  program39.cpp  program4.cpp  program5.cpp  program6.cpp  program7.cpp  program8.cpp  program9.cpp  (+1 more)
