cmake_minimum_required(VERSION 3.26)
project(Markov)

set(CMAKE_CXX_STANDARD 17)

add_executable(Markov main.cpp
        Semestr-1/check.cpp
        Semestr-1/program1.cpp
        Semestr-1/program2.cpp
        Semestr-1/program3.cpp
        Semestr-1/program4.cpp
        Semestr-1/program5.cpp
        Semestr-1/program6.cpp
        Semestr-1/program7.cpp
        Semestr-1/program8.cpp
        Semestr-1/program9.cpp
        Semestr-1/program10.cpp
        Semestr-1/program11.cpp
        Semestr-1/program12.cpp
        Semestr-1/program13.cpp
        Semestr-1/program14.cpp
        Semestr-1/program15.cpp
        Semestr-1/program16.cpp
        Semestr-1/program17.cpp
        Semestr-1/program18.cpp
        Semestr-1/program19.cpp
        Semestr-1/program20.cpp
        Semestr-1/program21.cpp
        Semestr-1/program22.cpp
        Semestr-1/program23.cpp
        Semestr-1/program24.cpp
        Semestr-1/program25.cpp
        Semestr-1/program26.cpp
        Semestr-1/program27.cpp
        Semestr-1/program28.cpp
        Semestr-1/program29.cpp
        Semestr-1/program30.cpp
        Semestr-1/program31.cpp
        Semestr-1/program32.cpp
        Semestr-1/program33.cpp
        Semestr-1/program34.cpp
        Semestr-1/program35.cpp
        Semestr-1/program36.cpp
        Semestr-1/program37.cpp
        Semestr-1/program38.cpp
        Semestr-1/program39.cpp)
